<resources>
    <string name="app_name">Petagram4</string>
    <string name="nombre_generico">Nombre</string>
    <string name="foto_generico">Foto</string>
    <string name="hueso">Hueso</string>
    <string name="likes">5</string>
    <string name="estrella">Estrella</string>
    <string name="huella">Huella</string>
    <string name="Back">Atrás</string>
    <string name="MenuContacto">Contacto</string>
    <string name="MenuAcercaDe">Acerca de...</string>
    <string name="nombre">Nombre</string>
    <string name="correo">Correo electrónico</string>
    <string name="mensaje">Mensaje</string>
    <string name="aceptar">Aceptar</string>
    <string name="disclaimer">Petagram3 es una aplicación desarrollada por Tomás Herrero</string>
    <string name="bio">Nacido en Madrid el 31/3/1970</string>
    <string name="miEmail">tomasherrero@gmail.com</string>
    <string name="miNombre">Tomás Herrero Sánchez</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
