<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CardViewContacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margen"
    card_view:cardCornerRadius="@dimen/cornerRadiusCardview">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/foto"
            android:layout_width="@dimen/ladoFoto"
            android:layout_height="@dimen/ladoFoto"
            android:contentDescription="@string/foto_generico"
            android:scaleType="fitXY"
            android:src="@drawable/mascota1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <ImageView
                android:id="@+id/hueso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:contentDescription="@string/hueso"
                android:src="@drawable/hueso_blanco" />

            <TextView
                android:id="@+id/nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:contentDescription="@string/nombre_generico"
                android:text="@string/nombre_generico" />

            <TextView
                android:id="@+id/likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:textAlignment="textEnd"
                android:layout_gravity="end"
                android:contentDescription="@string/huella"
                android:text="@string/likes" />

            <ImageView
                android:id="@+id/huesoAmarillo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:src="@drawable/hueso_amarillo"
                android:contentDescription="@string/huella" />
        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
