<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar2"
    android:layout_width="match_parent"
    android:layout_height="56dp"
    android:background="#FFA000"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingRight="15dp">

        <ImageView
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:contentDescription="@string/Back"
            android:onClick="onClickBack"
            android:src="@drawable/back" />

        <ImageView
            android:id="@+id/toolbarimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:contentDescription="@string/huella"
            android:src="@drawable/huella" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp" />

    </LinearLayout>

</android.support.v7.widget.Toolbar>