<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityContacto">

    <include android:id="@+id/miActionBarRated"
        layout="@layout/actionbar2">
    </include>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/campo_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre"
            android:inputType="textCapWords"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:counterMaxLength="30"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/campo_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:counterEnabled="true"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/campo_mensaje"
            android:lines="4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/mensaje"
            android:inputType="textMultiLine"
            android:singleLine="false" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/boton_aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/aceptar"
        android:textColor="@android:color/white"
        tools:targetApi="lollipop" />

</LinearLayout>